renewal DBFlute generated classes